--- a/backend/.confing/nginx/backend.conf
+++ b/backend/.confing/nginx/backend.conf
@@ -5,7 +5,7 @@ server {
     client_max_body_size 128M;
  
     location / {
-        uwsgi_pass  unix:///tmp/mysite.sock;
+        proxy_pass  http://0.0.0.0:8000;
         include     uwsgi_params;
     }
 }
